--- a/accounts.json.example
+++ b/accounts.json.example
@@ -4,7 +4,7 @@
     "signingKey": "signingKey1",
     "host": "127.0.0.1",
     "port": 4100,
-    "bskyIdentifier": "handle1.bsky.social",
+    "bskyHandle": "handle1.bsky.social",
     "bskyPassword": "password1"
   },
   {
@@ -12,7 +12,7 @@
     "signingKey": "signingKey2",
     "host": "127.0.0.1",
     "port": 4102,
-    "bskyIdentifier": "handle2.bsky.social",
+    "bskyHandle": "handle2.bsky.social",
     "bskyPassword": "password2"
   }
 ]
