--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+PDS_URL=https://bsky.social
+DEFAULT_LANGUAGE=en
+POST_DATE=2026-01-01
 METRICS_PORT=4101
 FIREHOSE_URL=wss://jetstream1.us-east.bsky.network/subscribe
 CURSOR_UPDATE_INTERVAL=10000
